# ERPPOP

./: .env.example  .gitignore  .htaccess  DEPLOYMENT.md  tailwind.config.js
.github/workflows/: deploy.yml  pos-desktop-release.yml
app/Models/: AccountingExportRun.php  AccountingPeriod.php  AppSetting.php  ApprovalRequest.php  AuditLog.php  BankAccount.php  BankReconciliation.php  BankStatement.php  BillingNote.php  BillingNoteItem.php  Branch.php  BranchExpense.php  CashBook.php  ChartOfAccount.php  Cheque.php  Customer.php  CustomerAddress.php  CustomerContact.php  CustomerLedger.php  CustomerOpenItem.php  DepreciationRecord.php  DiscountCard.php  Document.php  DocumentBook.php  DocumentType.php  ETaxDocument.php  EcommerceChannel.php  Employee.php  EmployeeOrgAssignment.php  FixedAsset.php  FlashSale.php  FlashSaleItem.php  GlJournal.php  ImportBatch.php  ImportError.php  ImportFile.php  ImportedPayment.php  ImportedReceipt.php  ImportedReceiptItem.php  InventoryCostClose.php  (+75 more)
app/Observers/: DocumentObserver.php  GlJournalObserver.php  StockMovementObserver.php
app/Support/: ThaiBaht.php  (+2 more)
apps/pos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/pos-desktop/src-tauri/capabilities/: default.json
apps/pos-desktop/src-tauri/icons/: icon.icns
apps/pos-desktop/src-tauri/src/: lib.rs  main.rs
bootstrap/: app.php
config/: company.php  database.php  mssql_source.php
deploy/: env.example
docs/: OPERATIONS.md
public/: manifest.webmanifest  pos-sw.js
routes/: api.php  console.php  web.php
scripts/: deploy-ssh.sh  deploy.sh  publish-mobile.sh
(+417 files in other folders)
